--- a/arch/arm64/boot/dts/freescale/imx8mq-hummingboard-pulse.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mq-hummingboard-pulse.dts
@@ -1,6 +1,7 @@
 // SPDX-License-Identifier: (GPL-2.0 OR MIT)
 /*
  * Copyright (C) 2018 Jon Nettleton <jon@solid-run.com>
+ * Copyright (C) 2020 Josua Mayer <josua@solid-run.com>
  */
 
 /dts-v1/;
